--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <p>Endless opportunities that await you as you enhance your skills and knowledge in the world of technology.</p>
         <div class="fea-base">
             <div class="fea-box">
-                <i class="fas fa-file-certificate"></i>
+                <i class="fas fa-graduation-cap"></i>
                 <h3>Scholarship Facilities</h3>
                 <p>Explore our comprehensive scholarship facilities to support your educational aspirations.</p>
             </div>
